Bug 1228984 - [css-grid] Auto-placement into columns missed some unoccupied span-1 column slots.  r=dholbert